@@ -11,7 +11,7 @@
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
     <packaging>jar</packaging>
-    <version>20190814</version>
+    <version>20190829</version>
 
     <properties>
         <aws.sdk.version>1.11.199</aws.sdk.version>
