@@ -75,7 +75,7 @@ public class HDFSMapFileWrapper extends AbstractHDFSKeyValueFileWrapper {
     }
 
     @Override
-    public HDFSFileReader getHDFSFileReader(final Map<String, String> inputValues)
+    public HDFSFileReader getHDFSFileReader(final Map<String, String> inputValues, final boolean getSchemaParameters)
         throws IOException, InterruptedException, CustomWrapperException {
 
         final Configuration conf = getHadoopConfiguration(inputValues);
@@ -88,6 +88,8 @@ public class HDFSMapFileWrapper extends AbstractHDFSKeyValueFileWrapper {
         
         final String fileNamePattern = inputValues.get(Parameter.FILE_NAME_PATTERN);
 
-        return new HDFSMapFileReader(conf, hadoopKeyClass, hadoopValueClass, path, fileNamePattern, null);
+        final boolean includePathColumn = Boolean.parseBoolean(inputValues.get(Parameter.INCLUDE_PATH_COLUMN));
+
+        return new HDFSMapFileReader(conf, hadoopKeyClass, hadoopValueClass, path, fileNamePattern, null, includePathColumn&&!getSchemaParameters);
     }
 }
